// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading if no content 1`] = `
<Connect(ApollosPullToRefreshWithoutData)
  handleRefresh={[Function]}
>
  <Meta
    title="Articles"
  />
  <div
    className="soft@portable soft-double@lap-and-up background--light-secondary"
  >
    <section
      className="soft-half"
    >
      <div
        className="grid"
      >
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="0"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="1"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="2"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="3"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="4"
        >
          <FeedItemSkeleton />
        </div>
        <div
          className="grid__item one-whole"
        >
          <mockConstructor />
        </div>
      </div>
    </section>
  </div>
</Connect(ApollosPullToRefreshWithoutData)>
`;

exports[`renders with props 1`] = `
<Connect(ApollosPullToRefreshWithoutData)
  handleRefresh={[Function]}
>
  <Meta
    title="Articles"
  />
  <div
    className="soft@portable soft-double@lap-and-up background--light-secondary"
  >
    <section
      className="soft-half"
    >
      <div
        className="grid"
      >
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="0"
        >
          <Connect(Apollo(LikesWrapper))
            item={Object {}}
          />
        </div>
        <div
          className="grid__item one-half@palm-wide one-third@portable one-quarter@anchored flush-bottom@handheld push-bottom@portable push-bottom@anchored"
          key="1"
        >
          <Connect(Apollo(LikesWrapper))
            item={Object {}}
          />
        </div>
        <div
          className="grid__item one-whole"
        >
          <mockConstructor />
        </div>
      </div>
    </section>
  </div>
</Connect(ApollosPullToRefreshWithoutData)>
`;
